--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ numpy==1.20.1
 opencv_python==4.5.5.62
 pandas==1.5.3
 torch==1.13.0
+torchvision==0.14
+torchdata==0.5.0
 torchsummary==1.5.1
 tqdm==4.59.0
 yacs==0.1.8
